--- a/css/style.css
+++ b/css/style.css
@@ -2597,7 +2597,7 @@ ul {
 .banner_part {
   height: 890px;
   position: relative;
-  background-image: url(../img/banner_bg_1.png);
+  background-image: url(https://via.placeholder.com/1900x800);
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center;
@@ -6407,7 +6407,7 @@ h6 {
 /************* breadcrumb css start *****************/
 /* line 2, ../../01 cl html template/New folder/May 2019/176 Interior Heaven/Interior Heaven Html/sass/_breadcrumb.scss */
 .breadcrumb_bg {
-  background-image: url("../img/breadcrumb.png");
+  background-image: url("https://via.placeholder.com/1920x500");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
