--- a/css/style.css
+++ b/css/style.css
@@ -2589,7 +2589,7 @@ ul {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #161f23;
+  background-color: #003e70;
 }
 
 /**************** banner part css start ****************/
