--- a/views/admin/includes/project.ejs
+++ b/views/admin/includes/project.ejs
@@ -65,7 +65,7 @@
                 </select>
             </div>
             <div class="mb-3">
-                <input type="file" name="img" class="form-control">
+                <input type="file" name="img" class="form-control" multiple>
             </div>
             <button type="submit" class="btn btn-dark">submit</button>
         </form>
