--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -20,8 +20,9 @@
             <%- include('includes/side-bar.ejs'); %>
                 <div class="col py-3">
                     <div class="row">
-                            <%- include('includes/about') %>
-                                
+                        <%- include('includes/about') %>
+                            <%- include('includes/project') %>
+
                     </div>
                 </div>
         </div>
