--- a/views/admin/includes/project.ejs
+++ b/views/admin/includes/project.ejs
@@ -54,6 +54,22 @@
                 <label for="txt">وصف المشروع</label>
                 <textarea name="descar" class="form-control" cols="30" rows="6"></textarea>
             </div>
+            <div class="mb-3" style="border: 2px solid #fff; padding: 20px;" id="detailsBox">
+                <label for="details" style="display: block;">تفاصيل المشروع</label>
+                <input type="text" name="detailsnamear" class="form-control" style="width: 40%; display: inline;"
+                    placeholder="تفاصيل" required>
+                <input type="text" name="detailsdataar" class="form-control" style="width: 40%; display: inline;"
+                    placeholder="اكتب التفصيلة" required>
+                <hr>
+                <label for="details" style="display: block;">project details</label>
+                <input type="text" name="detailsnameen" class="form-control" style="width: 40%; display: inline;"
+                    placeholder="details" required>
+                <input type="text" name="detailsdataen" class="form-control" style="width: 40%; display: inline;"
+                    placeholder="write details" required>
+                <hr>
+                <button type="button" id="addDetailsBtn" class="btn btn-dark"
+                    onclick="addDetails('detailsBox', 'addDetailsBtn')"> + </button>
+            </div>
             <div class="mb-3">
                 <select class="form-select" name="categ" aria-label="Disabled select example">
                     <option selected>categgory</option>
