--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -5,13 +5,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="shortcut icon" href="/main/img/logo.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/admin/css/style.css">
-    <title>smart space</title>
+    <title>Elmasaa Consltant</title>
 </head>
 
 <body onload="">
@@ -22,6 +22,7 @@
                     <div class="row">
                         <%- include('includes/about') %>
                             <%- include('includes/project') %>
+                                <%- include('includes/service') %>
 
                     </div>
                 </div>
