--- a/views/main-en/includes/head.ejs
+++ b/views/main-en/includes/head.ejs
@@ -53,7 +53,7 @@
                                         <li><a href="/">Home</a></li>
                                         <li><a href="/about">about</a></li>
                                         <li><a href="/service">service</a></li>
-                                        <li><a href="/project">project</a></li>
+                                        <li><a href="/projects">project</a></li>
                                         <li><a href="/contact">contact</a></li>
                                     </ul>
                                 </div>
