--- a/views/main-en/service.ejs
+++ b/views/main-en/service.ejs
@@ -28,36 +28,25 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="service_slider owl-carousel">
-                        <div class="single_service_slide">
-                            <div class="row justify-content-end align-items-center single_service">
-                                <div class="col-lg-6 col-md-6">
-                                    <img src="https://via.placeholder.com/270x315" alt="#">
-                                </div>
-                                <div class="col-lg-5 col-md-6">
-                                    <div class="service_text">
-                                        <h3>Home Decor</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-                                            ipsum </p>
+                        <%servs.forEach(s=>{ %>
+                            <div class="single_service_slide">
+                                <div class="row justify-content-end align-items-center single_service">
+                                    <div class="col-lg-6 col-md-6">
+                                        <img src="<%=s.img%>" alt="#">
+                                    </div>
+                                    <div class="col-lg-5 col-md-6">
+                                        <div class="service_text">
+                                            <h3>
+                                                <%=s.title.en%>
+                                            </h3>
+                                            <p>
+                                                <%=s.contetn.en%>
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="single_service_slide">
-                            <div class="row justify-content-end align-items-center single_service">
-                                <div class="col-lg-6 col-md-6">
-                                    <img src="https://via.placeholder.com/270x315" alt="#">
-                                </div>
-                                <div class="col-lg-5 col-md-6">
-                                    <div class="service_text">
-                                        <h3>Home Decor</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-                                            ipsum </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                            <%})%>
                     </div>
                 </div>
             </div>
@@ -66,40 +55,6 @@
     <!-- service part end-->
 
     <!-- contact us part start-->
-    <!-- <section class="contact_us">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="contact_us_iner">
-                        <div class="row justify-content-around">
-                            <div class="col-lg-4">
-                                <div class="contact_us_left_text">
-                                    <h4>Melbourne</h4>
-                                    <span>Australia</span>
-                                    <p>324 King Heaven tower, House no, 15 King building
-                                        Melbourne ,VIC-222, Australia</p>
-                                    <p>Email: infoheaven@gmail.com <br>Phone no: 23113 6456 888</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="contact_us_right_text">
-                                    <h5>Call Directly;</h5>
-                                    <h2>(23131 65465 54)</h2>
-                                    <h5>Brand Office</h5>
-                                    <span>324 King Heaven tower, House no, 15 King
-                                        Melbourne ,VIC-222, Australia</span>
-                                    <h5>Working Hours:</h5>
-                                    <p>Monday - Friday / 9.00 PM - 5.00 AM</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- contact us part end-->
-
     <!-- map us part start-->
     <section class="map_part">
         <div class="container-fluid">
