--- a/views/main-ar/includes/head.ejs
+++ b/views/main-ar/includes/head.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar">
 
 <head>
     <!-- Required meta tags -->
@@ -50,12 +50,12 @@
                             <div class="canven-menu-warp">
                                 <div class="canven-menu-iner">
                                     <ul>
-                                        <li><a href="/">Home</a></li>
-                                        <li><a href="/about">about</a></li>
-                                        <li><a href="/service">service</a></li>
-                                        <li><a href="/projects">project</a></li>
-                                        <li><a href="/contact">contact</a></li>
-                                        <li><a href="/lang/ar" style="color: #fff">عربي</a></li>
+                                        <li><a href="/">الرئيسية</a></li>
+                                        <li><a href="/about">من نحن</a></li>
+                                        <li><a href="/service">خدماتنا</a></li>
+                                        <li><a href="/projects">مشاريعنا</a></li>
+                                        <li><a href="/contact">اتصل بنا</a></li>
+                                        <li><a href="/lang/en" style="color: #fff">English</a></li>
                                     </ul>
                                 </div>
                             </div>
