--- a/views/main-ar/service.ejs
+++ b/views/main-ar/service.ejs
@@ -6,7 +6,7 @@
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner text-center">
                         <div class="breadcrumb_iner_item">
-                            <h2>services</h2>
+                            <h2>خدماتنا</h2>
                         </div>
                     </div>
                 </div>
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section_tittle">
-                        <h2>our service</h2>
+                        <h2>خدماتنا</h2>
                     </div>
                 </div>
             </div>
@@ -35,12 +35,12 @@
                                         <img src="<%=s.img%>" alt="#">
                                     </div>
                                     <div class="col-lg-5 col-md-6">
-                                        <div class="service_text">
+                                        <div class="service_text" style="text-align: right;">
                                             <h3>
-                                                <%=s.title.en%>
+                                                <%=s.title.ar%>
                                             </h3>
                                             <p>
-                                                <%=s.content.en%>
+                                                <%=s.content.ar%>
                                             </p>
                                         </div>
                                     </div>
