--- a/views/main-ar/includes/head.ejs
+++ b/views/main-ar/includes/head.ejs
@@ -38,6 +38,7 @@
                         <div class="logo">
                             <a href="index.html"><img src="/main/img/logo.png" alt="#"></a>
                         </div>
+                        <a href="/lang/en" class="lang" style="color: #fff">English</a>
                         <span class="menu-trigger visible-xs">
                             <span></span>
                             <span></span>
