--- a/views/main-en/includes/head.ejs
+++ b/views/main-en/includes/head.ejs
@@ -38,6 +38,7 @@
                         <div class="logo">
                             <a href="index.html"><img src="/main/img/logo.png" alt="#"></a>
                         </div>
+                        <a href="/lang/ar" class="lang" style="color: #fff">عربي</a>
                         <span class="menu-trigger visible-xs">
                             <span></span>
                             <span></span>
@@ -55,7 +56,6 @@
                                         <li><a href="/service">service</a></li>
                                         <li><a href="/projects">project</a></li>
                                         <li><a href="/contact">contact</a></li>
-                                        <li><a href="/lang/ar" style="color: #fff">عربي</a></li>
                                     </ul>
                                 </div>
                             </div>
