--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -6493,6 +6493,10 @@ h6 {
   height: 120px;
 }
 
+.logo {
+  margin-top: -25px;
+}
+
 .menu_fixed .logo a img {
   width: 75px;
   height: 75px;
@@ -6551,6 +6555,7 @@ h6 {
 
 .footer .footer-text {
   color: #fff;
+  white-space: nowrap;
 }
 
 .footer .footer-text a {
@@ -6982,4 +6987,30 @@ h6 {
 
 .footer img {
   width: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.lang {
+  color: #fff;
+  font-size: 20px;
+  border: 2px solid;
+  padding: 5px;
+  height: 50px;
+  width: 90px;
+  text-align: center;
+  position: relative;
+  right: -35%;
+  top: -10px;
+}
+
+@media (max-width: 991px) {
+  .logo a img {
+    width: 90px;
+    height: 90px;
+  }
+  .lang{
+    right: -10%;
+  }
 }
