--- a/views/main-ar/includes/footer.ejs
+++ b/views/main-ar/includes/footer.ejs
@@ -1,44 +1,27 @@
 <!-- footer part start-->
-<footer class="footer" dir="rtl" style="text-align: right;">
+<footer class="footer" dir="rtl">
     <div>
         <div class="container">
-            <div class="row align-items-center" style="padding-top: 50px;">
-                <div class="col-lg-6">
-                    <p class="footer-text m-0">
-                        <span class="ti-location-pin"></span>
-
-                        اسوان. تقسيم ارض ابوالشوك. امام الإسعاف د. عمارة المهندسين. الدور الثاني علوي قنا. ش البستان.
-                        امام هيئة الأبنية التعليمية. فوق الجزار , Aswan, Egypt
-
-                        <br>
-                        <br>
+            <div class="row align-items-center" style="padding-top: 30px;">
+                <div class="col-lg-4">
+                    <p class="footer-text m-0" style="white-space: normal; text-align: right;">
+                        <span class="ti-location-pin"></span>اسوان. تقسيم ارض ابوالشوك. امام الإسعاف د.
+                    <p class="footer-text m-0" style="padding-right: 20px;
+                    text-align: right;"> عمارة المهندسين.
+                        الدور الثاني علوي</p>
                     </p>
                     <p class="footer-text m-0">
                         <span class="ti-location-pin"></span>
-
-                        اسوان. تقسيم ارض ابوالشوك. امام الإسعاف د. عمارة المهندسين. الدور الثاني علوي قنا. ش البستان.
-                        امام هيئة الأبنية التعليمية. فوق الجزار , Aswan, Egypt
-
-                        <br>
-                        <br>
-                    </p>
-                    <p class="footer-text m-0">
-                        <span class="ti-location-pin"></span>
-
-                        اسوان. تقسيم ارض ابوالشوك. امام الإسعاف د. عمارة المهندسين. الدور الثاني علوي قنا. ش البستان.
-                        امام هيئة الأبنية التعليمية. فوق الجزار , Aswan, Egypt
-
-                        <br>
-                        <br>
+                        قنا. ش البستان. امام هيئة الأبنية التعليمية. فوق الجزار
                     </p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <form action="#" class="subscribe mb-4 mb-lg-0">
                         <a href="#" class="m-0 p-0"><img src="/main/img/logo.png" alt="Elamsa-consult"></a>
                     </form>
                 </div>
-                <div class="col-lg-3">
-                    <ul class="list-unstyled nav-links social nav-right text-lg-right">
+                <div class="col-lg-4">
+                    <ul class="list-unstyled nav-links social nav-right">
                         <li><a href="#"><span class="ti-twitter"></span></a></li>
                         <li><a href="#"><span class="ti-instagram"></span></a></li>
                         <li><a href="#"><span class="ti-facebook"></span></a></li>
