--- a/views/main-ar/project.ejs
+++ b/views/main-ar/project.ejs
@@ -27,6 +27,25 @@
                 </div>
             </div>
             <div class="row">
+                <% projects.forEach(p=>{%>
+                    <div class="col-lg-3">
+                        <div class="card" style="width: 100%">
+                            <img src="<%=p.imgs[0]%>" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <%=p.name.ar%>
+                                </h5>
+                                <p class="card-text">
+                                    <%=p.desc.ar.slice(0,50) %>...
+                                </p>
+                                <a href="/project/<%=p._id%>" class="btn_1">المزيد <span><img
+                                            src="/main/img/icon/left.svg" alt=""></span> </a>
+                            </div>
+                        </div>
+                    </div>
+                    <%})%>
+            </div>
+            <div class="row">
                 <div class="col-lg-12">
                     <div class="project_slider owl-carousel">
                         <% projects.forEach(p=>{%>
