--- a/views/main-ar/project.ejs
+++ b/views/main-ar/project.ejs
@@ -27,69 +27,24 @@
                 </div>
             </div>
             <div class="row">
-                <% projects.forEach(p=>{%>
+                <%projects.forEach(p=>{ %>
                     <div class="col-lg-3">
                         <div class="card" style="width: 100%">
-                            <img src="<%=p.imgs[0]%>" class="card-img-top" alt="...">
+                            <img src="<%=p.img%>" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     <%=p.name.ar%>
                                 </h5>
                                 <p class="card-text">
-                                    <%=p.desc.ar.slice(0,50) %>...
+                                    <%=p.desc.ar.slice(0,50)%>
                                 </p>
-                                <a href="/project/<%=p._id%>" class="btn_1">المزيد <span><img
-                                            src="/main/img/icon/left.svg" alt=""></span> </a>
+                                <a href="/project/<%=p._id%>" class="btn_1">learn more <span><img
+                                            src="/main/img/icon/left.svg" alt=""></span>
+                                </a>
                             </div>
                         </div>
                     </div>
                     <%})%>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="project_slider owl-carousel">
-                        <% projects.forEach(p=>{%>
-                            <div class="single_project_slide">
-                                <div class="row">
-                                    <% p.forEach(p=>{ %>
-                                        <div class="col-lg-6 col-md-6">
-                                            <img src="<%=p.imgs[0]%>" alt="#">
-                                            <div class="single_project_text" style="text-align: right;">
-
-                                                <p>
-                                                    <%=p.desc.ar.slice(0,50) %>...
-                                                </p>
-                                                <a href="/project/<%=p._id%>" class="btn_1">المزيد <span><img
-                                                            src="/main/img/icon/left.svg" alt=""></span> </a>
-                                            </div>
-                                        </div>
-                                        <%})%>
-                                </div>
-                            </div>
-                            <%})%>
-                                <!-- <div class="single_project_slide">
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6">
-                                    <img src="https://via.placeholder.com/270x315" alt="#">
-                                    <div class="single_project_text">
-
-                                        <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
-                                        <a href="single_project.html" class="btn_1">learn more <span><img
-                                                    src="img/icon/left.svg" alt=""></span> </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6">
-                                    <img src="https://via.placeholder.com/270x315" alt="#">
-                                    <div class="single_project_text">
-                                        <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
-                                        <a href="single_project.html" class="btn_1">learn more <span><img
-                                                    src="img/icon/left.svg" alt=""></span> </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-                    </div>
-                </div>
             </div>
         </div>
     </section>
