--- a/views/admin/includes/about.ejs
+++ b/views/admin/includes/about.ejs
@@ -11,6 +11,10 @@
                 <textarea name="ar" class="form-control" cols="30" rows="6"><%=about.ar%></textarea>
             </div>
             <div class="mb-3">
+                <label for="video">video</label>
+                <textarea name="video" class="form-control" cols="30" rows="6"><%=about.video%></textarea>
+            </div>
+            <div class="mb-3">
                 <input type="file" name="img" class="form-control">
             </div>
             <%}else{%>
@@ -21,6 +25,10 @@
                 <div class="mb-3">
                     <label for="txt">المحتوى</label>
                     <textarea name="ar" class="form-control" cols="30" rows="6"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="video">video</label>
+                    <textarea name="video" class="form-control" cols="30" rows="6"></textarea>
                 </div>
                 <div class="mb-3">
                     <input type="file" name="img" class="form-control">
