--- a/views/main-ar/about.ejs
+++ b/views/main-ar/about.ejs
@@ -38,17 +38,7 @@
                             </div>
                             <%}%>
                                 <div class="home_tips_video_popup">
-                                    <img src="/main/img/video_popup.png" alt="#">
-                                    <div class="extends_video">
-                                        <div class="intro_video_iner text-center d-flex align-items-center">
-                                            <div class="intro_video_icon">
-                                                <a id="play-video_1" class="video-play-button popup-youtube"
-                                                    href="https://www.youtube.com/watch?v=pBFQdxA-apI">
-                                                    <i class="fas fa-caret-right"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <%-about.video%>
                                 </div>
                 </div>
             </div>
@@ -60,59 +50,6 @@
 
     </div>
 
-    <!-- single special page item start -->
-    <section class="single_page_special">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="single_page_special_item owl-carousel">
-                        <div class="single_slide_item">
-                            <img src="https://via.placeholder.com/70x70" alt="">
-                            <div class="single_special_text">
-                                <h3>Inovative</h3>
-                                <p>Living Over He god living Creature that appear place</p>
-                            </div>
-                        </div>
-                        <div class="single_slide_item">
-                            <img src="https://via.placeholder.com/70x70" alt="">
-                            <div class="single_special_text">
-                                <h3>Inovative</h3>
-                                <p>Living Over He god living Creature that appear place</p>
-                            </div>
-                        </div>
-                        <div class="single_slide_item">
-                            <img src="https://via.placeholder.com/70x70" alt="">
-                            <div class="single_special_text">
-                                <h3>Inovative</h3>
-                                <p>Living Over He god living Creature that appear place</p>
-                            </div>
-                        </div>
-                        <div class="single_slide_item">
-                            <img src="https://via.placeholder.com/70x70" alt="">
-                            <div class="single_special_text">
-                                <h3>Inovative</h3>
-                                <p>Living Over He god living Creature that appear place</p>
-                            </div>
-                        </div>
-                        <div class="single_slide_item">
-                            <img src="https://via.placeholder.com/70x70" alt="">
-                            <div class="single_special_text">
-                                <h3>Inovative</h3>
-                                <p>Living Over He god living Creature that appear place</p>
-                            </div>
-                        </div>
-                        <div class="single_slide_item">
-                            <img src="https://via.placeholder.com/70x70" alt="">
-                            <div class="single_special_text">
-                                <h3>Inovative</h3>
-                                <p>Living Over He god living Creature that appear place</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- map us part start-->
     <section class="map_part">
@@ -120,7 +57,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="map_iner">
-                        <div class="map"></div>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d455.295185821188!2d32.9089203!3d24.08878!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14367b34f86452c7%3A0x42a3a5a9f672d514!2z2KfZhNmF2KfYs9ipINmD2YjZhtiz2YTYqiDZhNmE2KXYs9iq2LTYp9ix2KfYqiDZiNin2YTYo9i52YXYp9mEINin2YTZh9mG2K_Ys9mK2Kk!5e0!3m2!1sar!2seg!4v1677294652245!5m2!1sar!2seg"
+                            width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
