--- a/views/main-ar/includes/footer.ejs
+++ b/views/main-ar/includes/footer.ejs
@@ -4,15 +4,13 @@
         <div class="container">
             <div class="row align-items-center" style="padding-top: 30px;">
                 <div class="col-lg-4">
-                    <p class="footer-text m-0" style="white-space: normal; text-align: right;">
-                        <span class="ti-location-pin"></span>اسوان. تقسيم ارض ابوالشوك. امام الإسعاف د.
-                    <p class="footer-text m-0" style="padding-right: 20px;
-                    text-align: right;"> عمارة المهندسين.
-                        الدور الثاني علوي</p>
+                    <p class="footer-text m-0" style="white-space: nowrap; text-align: right; font-size: 12.4px;">
+                        <span class="ti-location-pin" style="font-size: 1rem;"></span>
+                        - أسوان - أسوان، تقسيم أرض أبو الشوك، أمام الإسعاف ، عمارة المهندسين - الدور الثاني علوي
                     </p>
                     <p class="footer-text m-0">
-                        <span class="ti-location-pin"></span>
-                        قنا. ش البستان. امام هيئة الأبنية التعليمية. فوق الجزار
+                        <span class="ti-location-pin"></span>- قنا - حوض عشرة، شارع البستان، بجوار الختام - الدور الثانى
+                        علوي
                     </p>
                 </div>
                 <div class="col-lg-4">
