--- a/views/main-ar/includes/head.ejs
+++ b/views/main-ar/includes/head.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>elmasaa</title>
+    <title>Elmassa Consult</title>
     <link rel="icon" href="/main/img/logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/main/css/bootstrap.min.css">
@@ -56,7 +56,6 @@
                                         <li><a href="/service">خدماتنا</a></li>
                                         <li><a href="/projects">مشاريعنا</a></li>
                                         <li><a href="/contact">اتصل بنا</a></li>
-                                        <li><a href="/lang/en" style="color: #fff">English</a></li>
                                     </ul>
                                 </div>
                             </div>
