--- a/views/main-en/includes/footer.ejs
+++ b/views/main-en/includes/footer.ejs
@@ -4,15 +4,14 @@
         <div class="container">
             <div class="row align-items-center" style="padding-top: 30px;">
                 <div class="col-lg-4">
-                    <p class="footer-text m-0">
-                        <span class="ti-location-pin"></span>
-                        598 Virginia Street, Apartment 2
-                        River Grove IL 60171
+                    <p class="footer-text m-0" style="font-size: 12px
+                    ;">
+                        <span class="ti-location-pin" style="font-size: 1rem;"></span>
+                        Aswan - Aswan, Takseem Aboshok Land, in front of Aswan Ambulance Facility
                     </p>
                     <p class="footer-text m-0">
                         <span class="ti-location-pin"></span>
-                        598 Virginia Street, Apartment 2
-                        River Grove IL 60171
+                        Qena - El Bostan Str. 2nd Floor
                     </p>
                 </div>
                 <div class="col-lg-4">
