--- a/views/main-en/index.ejs
+++ b/views/main-en/index.ejs
@@ -31,39 +31,6 @@
         </div>
     </section>
     <!-- banner part start-->
-
-    <!-- banner part start-->
-    <div class="our_speciality">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="single_special_part border_left">
-                        <img src="https://via.placeholder.com/70x70" alt="">
-                        <div class="single_special_text">
-                            <h3>Inovative</h3>
-                            <p>Living Over He god living Creature that appear place</p>
-                        </div>
-                    </div>
-                    <div class="single_special_part border_left">
-                        <img src="https://via.placeholder.com/70x70" alt="">
-                        <div class="single_special_text">
-                            <h3>Inovative</h3>
-                            <p>Living Over He god living Creature that appear place</p>
-                        </div>
-                    </div>
-                    <div class="single_special_part border_left">
-                        <img src="https://via.placeholder.com/70x70" alt="">
-                        <div class="single_special_text">
-                            <h3>Inovative</h3>
-                            <p>Living Over He god living Creature that appear place</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- banner part start-->
-
     <!-- about part start-->
     <div class="about_part section_bg">
         <div class="container-fluid">
@@ -72,7 +39,7 @@
                     <div class="about_part_text">
                         <h2>About Us</h2>
                         <p>
-                            <%=about.en.slice(100)%>...
+                            <%=about.en.slice(0,150)%>...
                         </p>
                         <a href="/about" class="btn_1">learn more <span><img src="/main/img/icon/left.svg"
                                     alt=""></span> </a>
@@ -165,41 +132,6 @@
             </div>
         </div>
     </section>
-    <!-- project_part part end-->
-    <!-- contact us part start-->
-    <!-- <section class="contact_us">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="contact_us_iner">
-                        <div class="row justify-content-around">
-                            <div class="col-lg-4">
-                                <div class="contact_us_left_text">
-                                    <h4>
-                                        <div class="logo">
-                                            <a href="#">
-                                                <img src="img/logo.png" alt="">
-                                            </a>
-                                        </div>
-                                    </h4>
-                                    <p>324 King Heaven tower, House no, 15 King building
-                                        Melbourne ,VIC-222, Australia</p>
-                                    <p>Email: infoheaven@gmail.com <br>Phone no: 23113 6456 888</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="contact_us_right_text">
-                                    <h5>Call Directly;</h5>
-                                    <h2>(23131 65465 54)</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- contact us part end -->
 
     <!-- map us part start-->
     <section class="map_part">
@@ -207,7 +139,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="map_iner">
-                        <div class="map"></div>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d455.295185821188!2d32.9089203!3d24.08878!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14367b34f86452c7%3A0x42a3a5a9f672d514!2z2KfZhNmF2KfYs9ipINmD2YjZhtiz2YTYqiDZhNmE2KXYs9iq2LTYp9ix2KfYqiDZiNin2YTYo9i52YXYp9mEINin2YTZh9mG2K_Ys9mK2Kk!5e0!3m2!1sar!2seg!4v1677294652245!5m2!1sar!2seg"
+                            width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
