--- a/views/main-en/includes/footer.ejs
+++ b/views/main-en/includes/footer.ejs
@@ -28,7 +28,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-12 text-lg-center" style="border-top: 2px solid #fff; margin-top: 20px;">
-                    <p class="footer-text m-0">
+                    <p class="footer-text m-0" style="white-space: normal;">
                         Copyright &copy;
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed
                         by <a href="https://api.whatsapp.com/send?phone=0201124560051" target="_blank">Motto
