--- a/views/main-en/includes/head.ejs
+++ b/views/main-en/includes/head.ejs
@@ -31,12 +31,12 @@
 <body>
     <!--::header part start::-->
     <header class="main_menu home_menu">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <div class="main_menu_iner">
                         <div class="logo">
-                            <a href="index.html"><img src="/main/img/logo.png" alt="#"></a>
+                            <a href=""><img src="/main/img/logo.png" alt="#"></a>
                         </div>
                         <a href="/lang/ar" class="lang" style="color: #fff">عربي</a>
                         <span class="menu-trigger visible-xs">
