--- a/views/main-en/index.ejs
+++ b/views/main-en/index.ejs
@@ -31,15 +31,78 @@
         </div>
     </section>
     <!-- banner part start-->
+    <!-- <div class="our_speciality" style="padding-top: 50px;">
+        <section class="single_page_special">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="single_page_special_item owl-carousel text-center">
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/1.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/2.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/3.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/4.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/5.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/6.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/7.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/8.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/9.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/10.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/11.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/12.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/13.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/14.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/15.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/16.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/17.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div> -->
     <!-- about part start-->
     <div class="about_part section_bg">
         <div class="container-fluid">
             <div class="row justify-content-end">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-5 col-md-6">
                     <div class="about_part_text">
                         <h2>About Us</h2>
                         <p>
-                            <%=about.en.slice(0,150)%>...
+                            <%=about.en.slice(0,50)%>...
                         </p>
                         <a href="/about" class="btn_1">learn more <span><img src="/main/img/icon/left.svg"
                                     alt=""></span> </a>
@@ -117,7 +180,7 @@
                                             <div class="single_project_text">
 
                                                 <p>
-                                                    <%=p.desc.en.slice(8) %>...
+                                                    <%=p.desc.en.slice(0,50) %>...
                                                 </p>
                                                 <a href="/project/<%=p._id%>" class="btn_1">learn more <span><img
                                                             src="/main/img/icon/left.svg" alt=""></span> </a>
