--- a/views/main-ar/index.ejs
+++ b/views/main-ar/index.ejs
@@ -30,6 +30,27 @@
             </div>
         </div>
     </section>
+    <div class="our_speciality">
+        <section class="single_page_special">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="single_page_special_item owl-carousel text-center">
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/massa-5.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/massa-6.png" alt="">
+                            </div>
+                            <div class="single_slide_item">
+                                <img src="/main/img/clints/massa-7.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     <!-- banner part start-->
     <!-- about part start-->
     <div class="about_part section_bg">
