--- a/views/main-en/contact.ejs
+++ b/views/main-en/contact.ejs
@@ -20,7 +20,7 @@
    <section class="contact-section section_padding">
       <div class="container">
          <div class="d-none d-sm-block mb-5 pb-4">
-            <div id="map" style="height: 480px;"></div>
+            <div id="map"></div>
             <section class="map_part">
                <div class="container-fluid">
                   <div class="row">
@@ -94,14 +94,13 @@
                <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                   <div class="media-body">
-                     <h3>00 (440) 9865 562</h3>
-                     <p>Mon to Fri 9am to 6pm</p>
+                     <h3>+20 111 012 2100</h3>
                   </div>
                </div>
                <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-email"></i></span>
                   <div class="media-body">
-                     <h3>support@elmasa.com</h3>
+                     <h3>info@elmasa.com</h3>
                      <p>Send us your query anytime!</p>
                   </div>
                </div>
