--- a/views/main-ar/contact.ejs
+++ b/views/main-ar/contact.ejs
@@ -93,14 +93,13 @@
                <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                   <div class="media-body">
-                     <h3>00 (440) 9865 562</h3>
-                     <p>Mon to Fri 9am to 6pm</p>
+                     <h3>+20 111 012 2100</h3>
                   </div>
                </div>
                <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-email"></i></span>
                   <div class="media-body">
-                     <h3>support@elmasa.com</h3>
+                     <h3>info@elmasa.com</h3>
                      <p>Send us your query anytime!</p>
                   </div>
                </div>
