--- a/views/main-en/index.ejs
+++ b/views/main-en/index.ejs
@@ -31,69 +31,27 @@
         </div>
     </section>
     <!-- banner part start-->
-    <!-- <div class="our_speciality" style="padding-top: 50px;">
+    <div class="our_speciality">
         <section class="single_page_special">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="single_page_special_item owl-carousel text-center">
                             <div class="single_slide_item">
-                                <img src="/main/img/clints/1.png" alt="">
+                                <img src="/main/img/clints/massa-5.png" alt="">
                             </div>
                             <div class="single_slide_item">
-                                <img src="/main/img/clints/2.png" alt="">
+                                <img src="/main/img/clints/massa-6.png" alt="">
                             </div>
                             <div class="single_slide_item">
-                                <img src="/main/img/clints/3.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/4.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/5.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/6.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/7.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/8.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/9.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/10.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/11.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/12.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/13.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/14.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/15.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/16.png" alt="">
-                            </div>
-                            <div class="single_slide_item">
-                                <img src="/main/img/clints/17.png" alt="">
+                                <img src="/main/img/clints/massa-7.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-    </div> -->
+    </div>
     <!-- about part start-->
     <div class="about_part section_bg">
         <div class="container-fluid">
