--- a/views/main-en/includes/head.ejs
+++ b/views/main-en/includes/head.ejs
@@ -52,10 +52,10 @@
                                 <div class="canven-menu-iner">
                                     <ul>
                                         <li><a href="/">Home</a></li>
-                                        <li><a href="/about">about</a></li>
-                                        <li><a href="/service">service</a></li>
-                                        <li><a href="/projects">project</a></li>
-                                        <li><a href="/contact">contact</a></li>
+                                        <li><a href="/about">about ud</a></li>
+                                        <li><a href="/service">services</a></li>
+                                        <li><a href="/projects">projects</a></li>
+                                        <li><a href="/contact">contact us</a></li>
                                     </ul>
                                 </div>
                             </div>
